Fix bad z-index for text-for-info modal

--- a/python/ecep/portal/static/css/locations.css
+++ b/python/ecep/portal/static/css/locations.css
@@ -10,6 +10,10 @@
     left: 5%;
 }
 
+#text-info-modal {
+    z-index: 9000;  /* .popover z-index is 2060, we want this in front of everything */
+}
+
 .container .location h2 {
     margin-top: 3em;
     margin-bottom: 1em;
